--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: FlowSorted.Blood.450k
-Version: 0.99.1
+Version: 1.0.1
 Title: Illumina HumanMethylation data on sorted blood cell populations
 Description: Raw data objects for the Illumina 450k DNA methylation
 	microarrays, and an object depicting which CpGs on the array are associated
@@ -7,6 +7,6 @@ Description: Raw data objects for the Illumina 450k DNA methylation
 Author: Andrew E Jaffe
 Maintainer: Andrew E Jaffe <andrew.jaffe@libd.org>
 License: Artistic-2.0
-Depends: R (>= 2.13.0), minfi
+Depends: R (>= 2.13.0), minfi (>= 1.8.0)
 LazyData: yes
 biocViews: IlluminaChip, Homo_sapiens, DNAMethylation
